Made changes from PR to fix streams and Object.assign calls.